--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,5 +1,5 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+    I'm an advanced Python programmer with a focus on managing and processing geospatial data. I have extensive database experience in the Postgres/PostGIS environment and am very comfortable writing SQL/PL programs to manage and transform large datasets. I also have significant experience using Jenkins to manage CI/CD pipelines, writing Bash & ZSH scripts to perform low-level tasks, automating infrastructure management with Ansible, and containerizing independent services with Docker. I like to work primarily in a GNU/Linux-based OS, preferably Ubuntu / Debian. I am proficient in but not as experienced in web development, primarily using Python's Flask and Node.js. 
 </div>
