update map to include city info

--- a/_sass/components/_global.scss
+++ b/_sass/components/_global.scss
@@ -40,7 +40,9 @@ td {
   vertical-align: bottom;
 }
 table {
-  width: 100%;
+  &.full-width {
+   width: 100%;
+  }
   display: table;
   &.bordered > thead > tr,
   &.bordered > tbody > tr {
